<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">Initiative Cast</string>
    <string name="app_id">584F0BEF</string>
    <string name="namespace">urn:x-cast:com.google.cast.sample.helloworld</string>
    <string name="action_settings">Settings</string>
    <string name="message_to_cast">Message to Cast&#8230;</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="buttontext">Update</string>
    <string name="header1">Show</string>
    <string name="header2">Names</string>
    <string name="header3">Initiative</string>
    <string name="context1">Clear Row</string>
    <string name="choosefile">Choose a File</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="defaultfile">Filename</string>
    <string name="context2">Delete Row</string>

</resources>