<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/filedialog"
    android:padding="4dp"
    android:divider="@android:color/background_light"
    android:dividerHorizontal="@android:color/background_light"
    android:dividerVertical="@android:color/background_light"
    android:dividerHeight="1dip">
    <!--todo put a list of files in this dialog-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/filename"
        android:inputType="text"
        android:hint="@string/defaultfile" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:background="?android:attr/dividerVertical" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="43dp"
        android:dividerHorizontal="@android:color/background_light"
        android:dividerVertical="@android:color/background_light"
        android:dividerHeight="1dip">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/load"
            android:id="@+id/loadbutton"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerHorizontal" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/savebutton"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1" />
    </TableRow>

</LinearLayout>